# angle-distribution

./: .gitignore  Cargo.toml  README.md  build_native.sh  hist.py
50CH3OH/: 50CH3OH-CG-200.xtc-angles.txt
src/: main.rs
