[package]
name = "angle-distribution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chemfiles = "0.10"
rayon = "1.5"

[profile.release]
opt-level = 3  # Optimize for size, change to "s" if more aggressive optimizations are needed
lto = true  # Enable Link Time Optimization
codegen-units = 1  # Single codegen unit for better optimization
debug = false  # Disable debug information
panic = 'abort'  # Abort on panic, reduces binary size